--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tahoe-lafs-indicator (0.2-0ubuntu1) quantal; urgency=low
+
+  * Bumped version
+
+ -- Sergio Rubio <rubiojr@frameos.org>  Mon, 03 Dec 2012 21:25:59 +0100
+
 tahoe-lafs-indicator (0.1.1-0ubuntu1) quantal; urgency=low
 
   * 0.1.1 update 
